# lcogtsnpipe

./: .dockerignore  .gitignore  Dockerfile  LICENCE.txt  README.md  bashrc  configure  docker-compose-testing.yml  docker-compose.yml  getting_help.md  image_subtraction.md  init-db.sh  manual.md  supernova.sql
trunk/: CHANGES.txt  MANIFEST  MANIFEST.in  PKG-INFO  README.txt  pyproject.toml  pytest.ini  setup.py
trunk/doc/: listcommand.txt  loglsc.txt
trunk/src/lsc/: OptimalSub.py  SubtractionUtil.py  __init__.py  banzaicat.py  configure  cosmics.py  externaldata.py  lscabsphotdef.py  lscabsphotdef_old.py  lscartstardef.py  lscastrodef.py  lscpsfdef.py  lscsnoopy.py  myloopdef.py  mysqldef.py  optimalsub.py  sites.py  sqlcl.py  subutil.py  util.py  zscale.py
trunk/src/lsc/standard/: photlog.txt  photlog2.txt  photlog_do_da.txt  photlog_do_da2.txt
trunk/src/lsc/standard/cat/: landolt.cat
trunk/src/lsc/standard/cat/apass/: ASASSN-18zy  ASASSN-19qw  ASASSN-20bs  ATLAS18mlv  ATLAS18unu  README  ZTF18abzrcnf
trunk/src/lsc/standard/cat/landolt/: L101_landolt_stetson.cat  L104_landolt_stetson.cat  L107_landolt_stetson.cat  L110_landolt_stetson.cat  L113_landolt.cat  L92_landolt_stetson.cat  L94_landolt.cat  L95_landolt_stetson.cat  README  SA109_landolt.cat  SA112_vizier_20221128.cat  SA93_vizier_20221128.cat
trunk/src/lsc/standard/cat/sloan/: README  s82_00420020_sloan_cat
trunk/src/lsc/standard/sex/: default.sex  default2.param  default2.sex
trunk/src/lsc/standard/stdlist/: sold.txt  standardlist.txt  supernovaelist.txt
trunk/tests/: conftest.py  test_cli.py  test_sites.py
trunk/tests/integration/: test_cli.py
trunk/tests/unit/: test_cosmics.py
